--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ tools/osx/simulator.xcodeproj/xcuserdata/davehodder.xcuserdatad/xcschemes/xcsche
 
 *.xcbkptlist
 tools/osx/simulator.xcodeproj/xcuserdata
+
+# emacs autosave and backups
+*~
+\#*\#
+.\#*
